// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`渲染不可用选择框 1`] = `
.c0.c0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-width: 160px;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 0px;
  background: transparent;
  margin-right: -32px;
  padding-right: 32px;
  cursor: default;
}

<select
  className="c0"
  disabled={true}
  onChange={[Function]}
>
  <option
    aria-label="None"
    value=""
  />
  <option
    value="1"
  >
    选项一
  </option>
</select>
`;

exports[`渲染原生选择框 1`] = `
.c0.c0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-width: 160px;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 0px;
  background: transparent;
  margin-right: -32px;
  padding-right: 32px;
  cursor: pointer;
}

<select
  className="c0"
  onChange={[Function]}
>
  <option
    aria-label="None"
    value=""
  />
  <option
    value="1"
  >
    选项一
  </option>
</select>
`;

exports[`渲染多选选择框 1`] = `
.c0.c0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-width: 160px;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 0px;
  background: transparent;
  margin-right: -32px;
  padding-right: 32px;
  cursor: pointer;
  height: auto;
  margin-right: 0px;
}

<select
  className="c0"
  multiple={true}
  onChange={[Function]}
>
  <option
    aria-label="None"
    value=""
  />
  <option
    value="1"
  >
    选项一
  </option>
  <option
    value="2"
  >
    选项二
  </option>
</select>
`;
